Use go 1.18.x on CI
Signed-off-by: moznion <moznion@mail.moznion.net>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,15 +4,16 @@ on:
 jobs:
   test:
     name: Check
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.18.x]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: install gotip
-      run: |
-        git clone --depth=1 https://go.googlesource.com/go $HOME/gotip
-        cd $HOME/gotip/src
-        ./make.bash
-        echo "GOROOT=$HOME/gotip" >> $GITHUB_ENV
-        echo "$HOME/gotip/bin:$PATH" >> $GITHUB_PATH
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
     - name: check out
       uses: actions/checkout@v2
     - name: test
