--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -11,13 +11,19 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
     - name: check out
-      uses: actions/checkout@v2
-    - name: test
-      run: go test ./... -race -v -coverprofile="coverage.txt" -covermode=atomic
+      uses: actions/checkout@v3
+    - name: install tools
+      run: "go install golang.org/x/tools/cmd/goimports@latest"
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: latest
+    - name: check
+      run: make ci-check
     - name: upload coverage
       uses: codecov/codecov-action@v2
       with:
