--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,12 +6,12 @@ jobs:
     name: Check
     strategy:
       matrix:
-        go-version: [1.18.x, 1.19.x, 1.20.x, 1.21.x]
+        go-version: [1.22.x, 1.23.x, 1.24.x]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
     - name: check out
@@ -19,14 +19,14 @@ jobs:
     - name: install tools
       run: "go install golang.org/x/tools/cmd/goimports@latest"
     - name: golangci-lint
-      uses: golangci/golangci-lint-action@v3
+      uses: golangci/golangci-lint-action@v7
       with:
         version: latest
         args: --timeout=5m
     - name: check
       run: make ci-check
     - name: upload coverage
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
 
